

PROJECT(  DelayedWindFarm )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Release)
SET(MY_DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/data/")
FIND_PACKAGE ( Threads REQUIRED )
FIND_PACKAGE ( Boost REQUIRED )

INCLUDE_DIRECTORIES( include )
ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -ffast-math -O3 -DDATA_LOCATION="${MY_DATA_DIR}")
ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( main )


