
SET(MY_LIBRARY_SRCS  
DelayedWindFarm.cpp 
)

ADD_LIBRARY(DelayedWindFarmLIB SHARED
${MY_LIBRARY_SRCS} 
)

TARGET_LINK_LIBRARIES( DelayedWindFarmLIB ${COMMONMATHLIB_LIBRARY})

ADD_LIBRARY(DelayedWindFarmLIB_static STATIC
${MY_LIBRARY_SRCS} 
)

TARGET_LINK_LIBRARIES( DelayedWindFarmLIB_static ${COMMONMATHLIB_LIBRARY}_static)

